Build all contribs as zip plugins inside contrib/ and not dist them in dist/ Use this as default repo